[tool.poetry]
name = "repl_python3_f1-digest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
apscheduler = "^3.7.0"
schedule = "^1.1.0"
pytz = "^2021.1"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
